Flickering issue solved: When a position is available and the user hovers over we display an X or O depending on the next player. The structure of every position in the board in terms of markdown was overcomplex, so that user had to hover exactly in a given div inside it. Now there is a single div and we modify its css class when user hovers over and when mouse leaves it.

--- a/game_ui/components/index.css
+++ b/game_ui/components/index.css
@@ -112,64 +112,40 @@ table {
     border: 5px solid rgb(220, 235, 223);
 }
 
-.space-wrapper-1 {
+.space {
     position: relative;
     width: 100%;
     height: 100%;
     cursor: pointer;
-}
-
-.space-wrapper-2 {
-    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-}
-
-.space-wrapper-3{
     display: table;
-    width: 100%;
-    height: 100%;
-}
-
-.space {
-    display: table-cell;
     vertical-align: middle;
-    font-size: 2.5em;
-    height: 33%;
+    font-size: 5.5em;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    font-family: FontAwesome;
 }
 
 .position-o {
-    position: relative;
-    font-size: 2em;
-    display: inline-block;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-}
-.position-o:before {
     content: "\f10c";
-    font-family: FontAwesome;
+}
+
+.position-o:before {
     left:-5px;
     top:0;
+    content: "\f10c";
 }
 
 .position-x {
-    position: relative;
-    font-size: 2em;
-    display: inline-block;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
+    content: "\f00d";
 }
 .position-x:before {
     content: "\f00d";
-    font-family: FontAwesome;
-    left:-5px;
-    top:0;
 }
 
 .game-control{
